# vex-go

./: README.md  go.mod  typs.go  util.go  vex_go.go  vex_go_test.go
pyvex_c/: CMakeLists.txt  Makefile-msvc  pyvex.c
vex/: CMakeLists.txt
